add all zone end-points
