# whareflow-server/docs/swagger.yaml
@@ -49,8 +49,6 @@ definitions:
         type: integer
       name:
         type: string
-      warehouse_id:
-        type: integer
     type: object
 host: localhost:8089
 info:
@@ -367,12 +365,53 @@ paths:
       summary: Создание склада
       tags:
       - warehouse
-  /zone:
+  /warehouse/{warehouse_id}/zone:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает список всех зон склада
+      parameters:
+      - description: warehouse id
+        in: path
+        name: warehouse_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'message: warehouse success created'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: 'error: invalid request body'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: 'error: internal server error'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Return zones list
+      tags:
+      - zone
     post:
       consumes:
       - application/json
       description: Создает новую зону склада
       parameters:
+      - description: warehouse id
+        in: path
+        name: warehouse_id
+        required: true
+        type: string
       - description: Данные для создания склада
         in: body
         name: request
@@ -403,6 +442,136 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Создание зоны склада
+      tags:
+      - zone
+  /warehouse/{warehouse_id}/zone/{zone_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Удаляет зону склада
+      parameters:
+      - description: warehouse id
+        in: path
+        name: warehouse_id
+        required: true
+        type: string
+      - description: zone id
+        in: path
+        name: zone_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'message: warehouse success created'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: 'error: invalid request body'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: 'error: internal server error'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Return zones list
+      tags:
+      - zone
+    get:
+      consumes:
+      - application/json
+      description: Возвращает зону склада
+      parameters:
+      - description: warehouse id
+        in: path
+        name: warehouse_id
+        required: true
+        type: string
+      - description: zone id
+        in: path
+        name: zone_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'message: warehouse success created'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: 'error: invalid request body'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: 'error: internal server error'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Return zones list
+      tags:
+      - zone
+    put:
+      consumes:
+      - application/json
+      description: Обновляет зону склада
+      parameters:
+      - description: warehouse id
+        in: path
+        name: warehouse_id
+        required: true
+        type: string
+      - description: zone id
+        in: path
+        name: zone_id
+        required: true
+        type: string
+      - description: Данные для обновления зоны склада
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/delivery.ZoneModelRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'message: zone success updated'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: 'error: invalid request body'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: 'error: internal server error'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Обновление зоны склада
       tags:
       - zone
 securityDefinitions:
