# whareflow-server/internal/deliviry/http/v1/model/zone.go
@@ -1,7 +1,12 @@
 package delivery
 
 type ZoneModelRequest struct {
-	Name        string `json:"name"`
-	Capacity    int    `json:"capacity"`
-	WarehouseId int    `json:"warehouse_id"`
+	Name     string `json:"name"`
+	Capacity int    `json:"capacity"`
+}
+
+type ZoneModelResponse struct {
+	Id       int    `json:"id"`
+	Name     string `json:"name"`
+	Capacity int    `json:"capacity"`
 }
