# whareflow-server/internal/repositories/zone_repository.go
@@ -3,5 +3,9 @@ package repositories
 import "github.com/Miroslovelife/whareflow/internal/domain"
 
 type ZoneRepository interface {
-	InsertZoneData(zone *domain.Zone) error
+	InsertZoneData(zone *domain.Zone, userId string) error
+	UpdateZoneData(zone *domain.Zone, userId string) error
+	FindAllZoneData(userId string, warehouseId int) (*[]domain.Zone, error)
+	FindZoneData(userId string, warehouseId, zoneId int) (*domain.Zone, error)
+	DeleteZoneData(userId string, warehouseId, zoneId int) error
 }
